# RCP11

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: PRD.md  UI_DESIGN_PROMPT.md
src/rcp/: __init__.py  cli.py  config.py  llm.py  objects.py
src/rcp/api/: main.py  manager.py
src/rcp/graph/: build.py  nodes.py  state.py
src/rcp/memory/: connectors.py  dedup.py  papercard.py  pipeline.py  query_planner.py  store.py  theme.py
src/rcp/models_library/: DataCenterRoom.mo  registry.json
src/rcp/simulation/: collector.py  registry.py  runner.py
tests/: test_api.py  test_collector.py  test_dedup.py  test_registry.py
webapp/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
webapp/src/: App.tsx  api.ts  hooks.ts  theme.ts  types.ts
webapp/src/components/: Badges.tsx  LineChart.tsx  Markdown.tsx
webapp/src/screens/: Dashboard.tsx  KnowledgeBase.tsx  Models.tsx  NewRun.tsx  RunDetail.tsx
