[project]
name = "rcp-platform"
version = "0.1.0"
description = "AI Agent Workflow for Scientific Discovery in Data Center Digital Twins (RCP2026/11)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.3",
    "langgraph-checkpoint-sqlite>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
rcp = "rcp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
